--- a/my_silant/templates/to_list_machine.html
+++ b/my_silant/templates/to_list_machine.html
@@ -42,22 +42,10 @@
         <section>
   <div class="line">
     <span class="title">
-      Проверьте комплектацию и технические характеристики техники Силант
+      Техническое обслуживание
     </span>
   </div>
   <div class="line">
-      <div class="search_result">
-      <div class="result_info">
-        <div class="result_collection">
-            <form method="GET">
-              {{ filter.form }}
-                <div class="tabs">
-                <input class="tab" type="submit" value="Фильтр">
-                </div>
-            </form>
-      </div>
-    </div>
-  </div>
     <div class="column">
       <div class="search_result">
         {% if is_aut %}
@@ -65,25 +53,36 @@
           <span>Добро пожаловать! {{request.user.first_name}}</span>
         </div>
         <div class="result_info">
-          <span>Информация о коплектации и технических характеристиках вашей техники</span>
+          <span>Информация о проведённом ТО вашей техники</span>
         </div>
-        <div class="result_collection">
+        <div class="search_result">
+        <div class="result_info">
+          <div class="machine">
+            <span>
+              Модель техники {{machine.technique_model}}
+            </span>
+            <span>
+              Заводской номер техники {{machine.number_machine}}
+            </span>
+          </div>
+        </div>
+           <div class="result_collection">
           <div class="tabs">
-            <a href="/user/">
-            <div class="tab active">
+            <a href="{% url 'machine_detail' machine.pk %}">
+            <div class="tab">
               <span>
                 Общая информация
               </span>
             </div>
             </a>
-            <a href="/to/">
-              <div class="tab">
+            <a href="{% url 'to_list' machine.pk %}">
+              <div class="tab active">
               <span>
                 ТО
               </span>
             </div>
             </a>
-            <a href="/complaint/">
+            <a href="{% url 'complaint_list' machine.pk %}">
             <div class="tab">
               <span>
                 Рекламации
@@ -91,55 +90,63 @@
             </div>
             </a>
           </div>
-        </div>
+      </div>
         <div class="result_collection">
           <table>
             <tbody><tr>
+              <th class="nam left">Вид ТО</th>
+              <th class="nam left">Дата проведения ТО</th>
+              <th class="nam left">Наработка, м/час</th>
+              <th class="nam left">№ заказ-наряда</th>
+              <th class="nam left">дата заказ-наряда</th>
+              <th class="nam left">Сервисная компания</th>
               <th class="nam left">Зав. № машины</th>
-              <th class="nam left">Модель техники</th>
-              <th class="nam left">Модель двигателя</th>
-              <th class="nam left">Зав. № двигателя</th>
-              <th class="nam left">Модель трансмиссии</th>
-              <th class="nam left">Зав. № трансмиссии</th>
-              <th class="nam left">Модель ведущего моста</th>
-              <th class="nam left">Зав. № ведущего моста</th>
-              <th class="nam left">Модель управляемого моста</th>
-              <th class="nam left">Зав. № управляемого моста</th>
-              <th class="nam left">Детали</th>
-            </tr>
-            {% for m in filter.qs %}
-            <tr id="myUL">
-              <td class="nam left">{{m.number_machine}}</td>
-              <td class="nam left">{{m.technique_model}}</td>
-              <td class="nam left">{{m.engine_model}}</td>
-              <td class="nam left">{{m.engine_number}}</td>
-              <td class="nam left">{{m.transmission_model}}</td>
-              <td class="nam left">{{m.transmission_number}}</td>
-              <td class="nam left">{{m.drive_axle_model}}</td>
-              <td class="nam left">{{m.drive_axle_number}}</td>
-              <td class="nam left">{{m.steering_bridge_model}}</td>
-              <td class="nam left">{{m.steering_bridge_number}}</td>
+              <th class="nam left">Изменить</th>
+              <th class="nam left">Удалить</th>
+            <tr>
+              {% for to in to_list %}
+              <td class="nam left">{{to.service_type}}</td>
+              <td class="nam left">{{to.service_date}}</td>
+              <td class="nam left">{{to.operating_time}}</td>
+              <td class="nam left">{{to.work_order_number}}</td>
+              <td class="nam left">{{to.work_order_date}}</td>
+              <td class="nam left">{{to.company_make_service}}</td>
+              <td class="nam left">{{to.machine_to}}</td>
               <td class="nam left">
                 <div class="tabs">
-                  <a href="{% url 'machine_detail' m.pk %}">
+                  <a href="{% url 'to_update' to.pk %}">
                     <div class="tab active">
                       <span>
-                        <div class="smalltext">детали</div>
+                        <div class="smalltext">Изменить</div>
+                      </span>
+                    </div>
+                  </a>
+                </div>
+              </td>
+              <td class="nam left">
+                <div class="tabs">
+                  <a href="{% url 'to_delete' to.pk %}">
+                    <div class="tab active">
+                      <span>
+                        <div class="smalltext">Удалить</div>
                       </span>
                     </div>
                   </a>
                 </div>
               </td>
             </tr>
+            </tr>
             {% endfor %}
           </tbody></table>
-          {% if machine == 'К сожалению Ваша техника отсутствует в базе :(' %}
-          <div class="search_result empty_result">
-            <span>
-              {{ machine }}
-            </span>
-          </div>
-          {% endif %}
+          <div class="tabs">
+                  <a href="{% url 'to_create' %}">
+                    <div class="tab">
+                      <span>
+                        Добавить ТО
+                      </span>
+                    </div>
+                  </a>
+                </div>
           {% else %}
           <div class="search_result empty_result">
             <span>
