Добавлена возможность добавления списков

--- a/my_silant/templates/lists/recoverymethod_list.html
+++ b/my_silant/templates/lists/recoverymethod_list.html
@@ -171,7 +171,7 @@
             {% endfor %}
           </tbody></table>
           <div class="tabs">
-                  <a href="{% url 'to_create' %}">
+                  <a href="{% url 'create_reco' %}">
                     <div class="tab">
                       <span>
                         Добавить
