Добавлены детали (описание списков) в таблицы деталей, добвлена сортировка по полям в моделях

--- a/my_silant/templates/base.html
+++ b/my_silant/templates/base.html
@@ -15,7 +15,7 @@
     <header>
       <div class="centrator">
         <div class="leftside">
-          <div id="toplogo"><img srcset="/static/olegu/Oleg_files/Fon_2x-095de2741403db24ca64b83d02090237171be06c89578e6a182ada0d17e97c85.png 2x" src="/static/olegu/Oleg_files/Fon_1x-b7ee6391eb32c8c7c690b000fd3de4708f4e89785879ddfa4c32fac274f0b1f9.png"></div>
+          <div id="toplogo"><a href="/user/"><img srcset="/static/olegu/Oleg_files/Fon_2x-095de2741403db24ca64b83d02090237171be06c89578e6a182ada0d17e97c85.png 2x" src="/static/olegu/Oleg_files/Fon_1x-b7ee6391eb32c8c7c690b000fd3de4708f4e89785879ddfa4c32fac274f0b1f9.png"></a></div>
         </div>
         <div class="rightside">
           <div class="line">
