--- a/my_silant/templates/search.html
+++ b/my_silant/templates/search.html
@@ -50,7 +50,7 @@
       <div class="form_line">
         <div class="input">
           <input type="text" placeholder="Заводской номер" name="search">
-          <span>Например: ABC-00000776-7834534-67</span>
+          <span>Например: 00XX</span>
         </div>
         <input type="submit" value="Найти">
       </div>
