--- a/my_silant/templates/to_detail.html
+++ b/my_silant/templates/to_detail.html
@@ -135,6 +135,15 @@
               </td>
             </tr>
             </tr>
+            <tr>
+              <td class="nam left">{{service.description}}</td>
+              <td class="nam left"></td>
+              <td class="nam left"></td>
+              <td class="nam left"></td>
+              <td class="nam left"></td>
+              <td class="nam left">{{service_company.description}}</td>
+              <td class="nam left"></td>
+            </tr>
           </tbody></table>
           <div class="tabs">
                   <a href="{% url 'to_create' %}">
