--- a/my_silant/templates/complaint_detail.html
+++ b/my_silant/templates/complaint_detail.html
@@ -140,6 +140,17 @@
               </td>
             </tr>
             </tr>
+            <tr>
+              <td class="nam left"></td>
+              <td class="nam left"></td>
+              <td class="nam left">{{node.description}}</td>
+              <td class="nam left"></td>
+              <td class="nam left">{{recovery.description}}</td>
+              <td class="nam left"></td>
+              <td class="nam left"></td>
+              <td class="nam left"></td>
+              <td class="nam left">{{service.description}}</td>
+            </tr>
           </tbody></table>
            <div class="tabs">
                   <a href="{% url 'complaint_create' %}">
