--- a/my_silant/templates/machine_detail.html
+++ b/my_silant/templates/machine_detail.html
@@ -156,6 +156,25 @@
                 </div>
               </td>
             </tr>
+            <tr>
+             <td class="nam left"></td>
+              <td class="nam left">{{technique.description}}</td>
+              <td class="nam left">{{engine.description}}</td>
+              <td class="nam left"></td>
+              <td class="nam left">{{trans.description}}</td>
+              <td class="nam left"></td>
+              <td class="nam left">{{axle.description}}</td>
+              <td class="nam left"></td>
+              <td class="nam left">{{steering.description}}</td>
+              <td class="nam left"></td>
+              <td class="nam left"></td>
+              <td class="nam left"></td>
+              <td class="nam left"></td>
+              <td class="nam left"></td>
+              <td class="nam left"></td>
+              <td class="nam left"></td>
+              <td class="nam left">{{service.description}}</td>
+            </tr>
           </tbody></table>
           <div class="tabs">
                   <a href="{% url 'machine_create' %}">
